dataset1235/2025-2/1955397009/users/1439409056/executions/2304143742_359761547.log
== SUBMISSION (2025-09-02 18:53:52)
-- CODE: 
i = int(input("Digite sua idade:"))

if i >=2:
  print("paga")
else:
  print("nao_paga")

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Digite sua idade:paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
Digite sua idade:nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
Digite sua idade:nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Digite sua idade:paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Digite sua idade:paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Digite sua idade:paga
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 18:53:12)
-- CODE: 
i = int(input("Digite sua idade:"))

if i >=2:
  print("paga")
else:
  print(nao_paga)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Digite sua idade:paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(nao_paga)
          ^^^^^^^^
NameError: name 'nao_paga' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(nao_paga)
          ^^^^^^^^
NameError: name 'nao_paga' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Digite sua idade:paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Digite sua idade:paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Digite sua idade:paga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 18:53:44)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
None
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
None
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
None
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 18:52:58)
-- CODE: 
i = int(input("Digite sua idade:"))

if i >=2:
  print("paga")
else:
  print(nao_paga)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Digite sua idade:paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(nao_paga)
          ^^^^^^^^
NameError: name 'nao_paga' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(nao_paga)
          ^^^^^^^^
NameError: name 'nao_paga' is not defined
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Digite sua idade:paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Digite sua idade:paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Digite sua idade:paga
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
